# gh-wh-handler

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gh-wh-handler.service.in  main.cpp
include/: config.hpp  logger.hpp  routes.hpp
include/config/: config-api.hpp  dialog-menu.hpp  terminal-menu.hpp
include/endpoints/: run-actions.hpp  run-scripts.hpp  update-files.hpp
installer/: install.sh  uninstall.sh
src/: config.cpp  logger.cpp  main.cpp  routes.cpp
src/config/: config-api.cpp  dialog-menu.cpp  terminal-menu.cpp
src/endpoints/: run-actions.cpp  run-scripts.cpp  update-files.cpp
